--- a/index.html
+++ b/index.html
@@ -5,10 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCK PAPER SCISSOR</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="app">
+            <header class="header">
+                <img src="/assets/rps-logo.jpeg" width="60" alt="Rock">
+                <p>Let's settle this like adults!</p>
+            </header>
+            <main>
+                <!-- Score Board -->
+                <div class="score-board">
+                    <div id="user-label" class="badge">
+                        <img src="/assets/rps-human.jpg" alt="Rock">
+                        <span id="user-score">0</span>
+                    </div>
+                    <div id="computer-label" class="badge">
+                        <img src="/assets/rps-vs.png" alt="Rock">
+                    </div>
+                    <div id="computer-label" class="badge">
+                        <img src="/assets/rps-computer.jpg" alt="Rock">
+                        <span id="computer-score">0</span>
+                    </div>
+                </div>
+                <!-- <div class="result">
+                    <p>Make your move!</p>
+                </div> -->
+
+                <!-- Play Area -->
+                <div class="play-area">
+                    <div class="choices user-choices">
+                        <div class="choice" id="rock">
+                            <img src="/assets/rps-rock.jpeg" alt="Rock">
+                        </div>
+                        <div class="choice" id="paper">
+                            <img src="/assets/rps-paper.jpeg" alt="Paper">
+                        </div>
+                        <div class="choice" id="scissor">
+                            <img src="/assets/rps-scissor.jpg" alt="Scissor">
+                        </div>
+                    </div>
+
+                    <div class="choices comp-choices">
+                        <div class="choice" id="rock">
+                            <img src="/assets/rps-rock.jpeg" alt="Rock">
+                        </div>
+                        <div class="choice" id="paper">
+                            <img src="/assets/rps-paper.jpeg" alt="Paper">
+                        </div>
+                        <div class="choice" id="scissor">
+                            <img src="/assets/rps-scissor.jpg" alt="Scissor">
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <footer class="footer">
+                <small align="center">
+                    @2026 Rock Paper Scissor.
+                    <hr>
+                    All rights reserved.
+                </small>
+            </footer>
+        </div>
+        <script src="script.js"></script>
 </body>
 
 </html>
