Changing path gh-pages

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="container">
         <div class="app">
             <header class="header">
-                <img src="/assets/rps-logo.jpeg" width="60" alt="Rock">
+                <img src="assets/rps-logo.jpeg" width="60" alt="Rock">
                 <p>Let's settle this like adults!</p>
             </header>
             <main>
                 <!-- Score Board -->
                 <div class="score-board">
                     <div id="user-label" class="badge">
-                        <img src="/assets/rps-human.jpg" alt="Rock">
+                        <img src="assets/rps-human.jpg" alt="Rock">
                         <span id="user-score">0</span>
                     </div>
                     <div id="computer-label" class="badge">
-                        <img src="/assets/rps-vs.png" alt="Rock">
+                        <img src="assets/rps-vs.png" alt="Rock">
                     </div>
                     <div id="computer-label" class="badge">
-                        <img src="/assets/rps-computer.jpg" alt="Rock">
+                        <img src="assets/rps-computer.jpg" alt="Rock">
                         <span id="computer-score">0</span>
                     </div>
                 </div>
@@ -39,25 +39,25 @@
                 <div class="play-area">
                     <div class="choices user-choices">
                         <div class="choice" id="rock">
-                            <img src="/assets/rps-rock.jpeg" alt="Rock">
+                            <img src="assets/rps-rock.jpeg" alt="Rock">
                         </div>
                         <div class="choice" id="paper">
-                            <img src="/assets/rps-paper.jpeg" alt="Paper">
+                            <img src="assets/rps-paper.jpeg" alt="Paper">
                         </div>
                         <div class="choice" id="scissor">
-                            <img src="/assets/rps-scissor.jpg" alt="Scissor">
+                            <img src="assets/rps-scissor.jpg" alt="Scissor">
                         </div>
                     </div>
 
                     <div class="choices comp-choices">
                         <div class="choice" id="rock">
-                            <img src="/assets/rps-rock.jpeg" alt="Rock">
+                            <img src="assets/rps-rock.jpeg" alt="Rock">
                         </div>
                         <div class="choice" id="paper">
-                            <img src="/assets/rps-paper.jpeg" alt="Paper">
+                            <img src="assets/rps-paper.jpeg" alt="Paper">
                         </div>
                         <div class="choice" id="scissor">
-                            <img src="/assets/rps-scissor.jpg" alt="Scissor">
+                            <img src="assets/rps-scissor.jpg" alt="Scissor">
                         </div>
                     </div>
                 </div>
